<resources>
    <string name="app_name">Grocery List</string>
    <string name="read_list">Read List</string>
    <string name="write_list">Write List</string>
    <string name="show_master_list">Show Master List</string>
    <string name="show_shopping_list">Show Shopping List</string>
    <string name="add_grocery_item">Add Grocery Item</string>
    <string name="add_item">Add Item</string>
    <string name="clear_all">Clear All</string>
    <string name="delete">Delete Checked</string>
    <string name="add_your_grocery_item">Add your grocery item</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="load_master">Load Master</string>
</resources>