<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_showMasterList"
        android:orderInCategory="100"
        android:title="@string/show_master_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_showShopList"
        android:orderInCategory="200"
        android:title="@string/show_shopping_list"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_add_item"
        android:orderInCategory="200"
        android:title="@string/add_item"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_clear_all"
        android:orderInCategory="200"
        android:title="@string/clear_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_checked"
        android:orderInCategory="200"
        android:title="@string/delete"
        app:showAsAction="never"/>
</menu>